Pushing v158 from API 2f4c838c856cef15fdb1a1f4bf2359e8bf9f0ad8

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -14002,6 +14002,8 @@ components:
         - queue.created
         - queue.updated
         - queue.deleted
+        - relationship.created
+        - relationship.updated
         - tag.created
         - tag.updated
         - tag.archived
