Pushing v159 from API 296029265f99419b88b4d31bb2dff4dc65d25fef

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -13782,7 +13782,7 @@ components:
           type: string
           nullable: true
           description: Last name of the user.
-          example: mem_06Z9ZCYZu9HF0IGgGdZ4
+          example: Khan
         display_title:
           type: string
           maxLength: 50
