Pushing v160 from API 238e695a9d2c01decf1bb16f24a2d790f2ca9490

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -13988,6 +13988,13 @@ components:
         - device.deactivated
         - device.deleted
         - file.created
+        - form.created
+        - form.updated
+        - form_response.created
+        - form_response.updated
+        - form_response.submitted
+        - form_version.created
+        - form_version.updated
         - group.created
         - group.updated
         - group.deleted
