--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3450,6 +3450,12 @@ paths:
                           early exit points to indicate which screen is used for the early exit. An
                           exit screen with key 'default' must exist in every form.
                         example: ineligible_location
+                      description:
+                        type: string
+                        description:
+                          A description of this exit screen. If the responder reaches this exit
+                          screen, the screen's description is displayed within the completed form
+                          response.
                       content_type:
                         type: string
                         enum:
@@ -3470,6 +3476,7 @@ paths:
                     required:
                       - type
                       - key
+                      - description
                       - content_type
                       - content
                     description: >-
@@ -11054,6 +11061,11 @@ components:
                   points to indicate which screen is used for the early exit. An exit screen with
                   key 'default' must exist in every form.
                 example: ineligible_location
+              description:
+                type: string
+                description:
+                  A description of this exit screen. If the responder reaches this exit screen, the
+                  screen's description is displayed within the completed form response.
               content_type:
                 type: string
                 enum:
@@ -11073,6 +11085,7 @@ components:
             required:
               - type
               - key
+              - description
               - content_type
               - content
             description: >-
